--- a/world/python-argon2-cffi/.artixlinux/pkgbase.yaml
+++ b/world/python-argon2-cffi/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: world
-pkgbase:
-  name: python-argon2-cffi
-  version: 23.1.0-3
-  arch:
-    - any
-  pkgname:
-    - python-argon2-cffi
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 23.1.0-3
+    version: 25.1.0-1
     packages:
-      - python-argon2-cffi-23.1.0-3-any.pkg.tar.zst
+      - python-argon2-cffi-25.1.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
