Updated python-cryptography - 45.0.4-1

--- a/world/python-cryptography/PKGBUILD
+++ b/world/python-cryptography/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Carl Smedstad <carsme@archlinux.org>
 
 pkgname=python-cryptography
-pkgver=45.0.3
+pkgver=45.0.4
 pkgrel=1
 pkgdesc="A package designed to expose cryptographic recipes and primitives to Python developers"
 arch=('x86_64')
@@ -33,7 +33,7 @@ checkdepends=(
   'python-pytest'
 )
 source=("git+https://github.com/pyca/cryptography.git#tag=$pkgver")
-sha512sums=('98a47bf3ebb94673b0e4f223b88985d3d9ddc1aeb88a7d0ba218d00b7545b42e3e7b3d9ec8db31b6fab0c778ea77d4e181a6acb3f6c8dd4b458179e4d9b6e21b')
+sha512sums=('3b0eae6cdf02888c4cd59f19423e351c56eb7f5ed14079ddfc6f052209b8fe92ed1cf9ff05a4fc45c7c8103b57cdd2275686972beab941ba8b6d4700b7b50389')
 
 prepare() {
   cd cryptography
@@ -44,7 +44,7 @@ prepare() {
 
 build() {
   cd cryptography
-  echo $RUSTFLAGS
+  echo "$RUSTFLAGS"
   # https://github.com/pyca/cryptography/issues/9023
   CC=clang RUSTFLAGS+=" -Clinker-plugin-lto -Clinker=clang -Clink-arg=-fuse-ld=lld" \
     python -m build --wheel --no-isolation --skip-dependency-check
