--- a/world/python-kubernetes/.artixlinux/pkgbase.yaml
+++ b/world/python-kubernetes/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: python-kubernetes
-  version: 32.0.1-1
-  arch:
-    - any
-  pkgname:
-    - python-kubernetes
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 32.0.1-1
+    version: 33.1.0-1
     packages:
-      - python-kubernetes-32.0.1-1-any.pkg.tar.zst
+      - python-kubernetes-33.1.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
