--- a/world/sof-bin/.artixlinux/pkgbase.yaml
+++ b/world/sof-bin/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: sof-bin
-  version: 2025.01.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - sof-firmware
-    - sof-tools
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2025.01.1-1
+    version: 2025.05-1
     packages:
-      - sof-firmware-2025.01.1-1-x86_64.pkg.tar.zst
-      - sof-tools-2025.01.1-1-x86_64.pkg.tar.zst
+      - sof-firmware-2025.05-1-x86_64.pkg.tar.zst
+      - sof-tools-2025.05-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
