--- a/world/percona-server/.artixlinux/pkgbase.yaml
+++ b/world/percona-server/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,11 +29,11 @@ repos:
     packages: []
     debug: []
   world:
-    version: 8.4.5_5-1
+    version: 8.4.5_5-2
     packages:
-      - libperconaserverclient-8.4.5_5-1-x86_64.pkg.tar.zst
-      - percona-server-clients-8.4.5_5-1-x86_64.pkg.tar.zst
-      - percona-server-8.4.5_5-1-x86_64.pkg.tar.zst
+      - libperconaserverclient-8.4.5_5-2-x86_64.pkg.tar.zst
+      - percona-server-clients-8.4.5_5-2-x86_64.pkg.tar.zst
+      - percona-server-8.4.5_5-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
