--- a/world/onnx/.artixlinux/pkgbase.yaml
+++ b/world/onnx/.artixlinux/pkgbase.yaml
@@ -2,7 +2,7 @@
 team: world
 actions:
   addRepo: world
-  removeRepo: world-gremlins
+  removeRepo: world-goblins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -30,10 +30,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 1:1.18.0-2
+    version: 1:1.18.0-3
     packages:
-      - onnx-1:1.18.0-2-x86_64.pkg.tar.zst
-      - python-onnx-1:1.18.0-2-x86_64.pkg.tar.zst
+      - onnx-1:1.18.0-3-x86_64.pkg.tar.zst
+      - python-onnx-1:1.18.0-3-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
