--- a/world/protobuf/.artixlinux/pkgbase.yaml
+++ b/world/protobuf/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,11 +29,11 @@ repos:
     packages: []
     debug: []
   world:
-    version: 31.0-2
+    version: 31.1-1
     packages:
-      - protobuf-31.0-2-x86_64.pkg.tar.zst
-      - python-protobuf-31.0-2-x86_64.pkg.tar.zst
-      - ruby-google-protobuf-31.0-2-x86_64.pkg.tar.zst
+      - protobuf-31.1-1-x86_64.pkg.tar.zst
+      - python-protobuf-31.1-1-x86_64.pkg.tar.zst
+      - ruby-google-protobuf-31.1-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
