--- a/galaxy/pysolfc/.artixlinux/pkgbase.yaml
+++ b/galaxy/pysolfc/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: pysolfc
-  version: 3.2.0-1
-  arch:
-    - any
-  pkgname:
-    - pysolfc
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 3.2.0-1
+    version: 3.2.0-2
     packages:
-      - pysolfc-3.2.0-1-any.pkg.tar.zst
+      - pysolfc-3.2.0-2-any.pkg.tar.zst
+    debug: []
 team: galaxy
