--- a/galaxy/qgis/.artixlinux/pkgbase.yaml
+++ b/galaxy/qgis/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: galaxy
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,16 +46,15 @@ repos:
     packages: []
     debug: []
   galaxy-goblins:
-    version: 3.42.2-2
-    packages:
-      - qgis-3.42.2-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   galaxy-gremlins:
     version: null
     packages: []
     debug: []
   galaxy:
-    version: 3.42.3-1
+    version: 3.42.3-2
     packages:
-      - qgis-3.42.3-1-x86_64.pkg.tar.zst
+      - qgis-3.42.3-2-x86_64.pkg.tar.zst
     debug: []
