--- a/world/mesa-demos/.artixlinux/pkgbase.yaml
+++ b/world/mesa-demos/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,10 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 9.0.0-6
+    version: 9.0.0-6.1
     packages:
-      - mesa-demos-9.0.0-6-x86_64.pkg.tar.zst
-      - mesa-utils-9.0.0-6-x86_64.pkg.tar.zst
+      - mesa-demos-9.0.0-6.1-x86_64.pkg.tar.zst
+      - mesa-utils-9.0.0-6.1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
