--- a/world/xscreensaver/PKGBUILD
+++ b/world/xscreensaver/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=xscreensaver
 pkgver=6.09
-pkgrel=2
+pkgrel=3
 pkgdesc='Screen saver and locker for the X Window System'
 url='https://www.jwz.org/xscreensaver/'
 arch=('x86_64')
@@ -18,7 +18,7 @@ makedepends=('bc' 'intltool' 'libxpm' 'gdm')
 optdepends=('gdm: for login manager support')
 backup=('etc/pam.d/xscreensaver')
 source=(https://www.jwz.org/xscreensaver/${pkgname}-${pkgver}.tar.gz
-        LICENSE)
+        license-from-upstream)
 sha512sums=('6002c1879e3f9c509b4f6b645146978da82def0ed7b9e9c421b11dadf0116380c63403c30167fa70a289321928abe39795a96f1a796afb920bd0e3ac416d3653'
             '863c699479b2ec2775a0d1cba22e615929194a14af164b3513e46a0c04229da6547255a4da8f7f1bbb40906898c124ed3c9ec2436b76b62affcb62385af9783e')
 b2sums=('34e3bf5b3affbfc6ef0aabaf9889c4b76ce27b09974d6c84a9b342b2267a3268fa1558a9bf0e0e487fce84ef218c3152fca4216268e15e40f82fef91021160da'
@@ -47,7 +47,7 @@ package() {
   cd ${pkgname}-${pkgver}
   install -d "${pkgdir}/etc/pam.d"
   make install_prefix="${pkgdir}" install
-  install -Dm 644 ../LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -Dm 644 ../license-from-upstream -t "${pkgdir}/usr/share/licenses/${pkgname}"
   echo "NotShowIn=KDE;GNOME;" >> "${pkgdir}/usr/share/applications/xscreensaver-settings.desktop"
 }
 
