--- a/galaxy/compface/.artixlinux/pkgbase.yaml
+++ b/galaxy/compface/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: compface
-  version: 1.5.2-12.2
-  arch:
-    - x86_64
-  pkgname:
-    - compface
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 1.5.2-12.2
+    version: 1.5.2-13
     packages:
-      - compface-1.5.2-12.2-x86_64.pkg.tar.zst
+      - compface-1.5.2-13-x86_64.pkg.tar.zst
+    debug: []
