--- a/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
+++ b/galaxy/telegram-desktop/.artixlinux/pkgbase.yaml
@@ -49,12 +49,13 @@ repos:
     packages: []
     debug: []
   galaxy-gremlins:
-    version: null
-    packages: []
+    version: 5.15.3-2
+    packages:
+      - telegram-desktop-5.15.3-2-x86_64.pkg.tar.zst
     debug: []
   galaxy:
-    version: 5.15.3-1
+    version: 5.15.4-2
     packages:
-      - telegram-desktop-5.15.3-1-x86_64.pkg.tar.zst
+      - telegram-desktop-5.15.4-2-x86_64.pkg.tar.zst
     debug: []
 team: galaxy
