--- a/galaxy/xcursor-vanilla-dmz/.artixlinux/pkgbase.yaml
+++ b/galaxy/xcursor-vanilla-dmz/.artixlinux/pkgbase.yaml
@@ -29,10 +29,8 @@ repos:
     packages: []
     debug: []
   world:
-    version: 0.4.5.2-1
-    packages:
-      - xcursor-vanilla-dmz-0.4.5.2-1-any.pkg.tar.zst
-      - xcursor-vanilla-dmz-aa-0.4.5.2-1-any.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   lib32-goblins:
     version: null
@@ -55,9 +53,9 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 0.4.5.2-1.1
+    version: 0.4.5.2-1.2
     packages:
-      - xcursor-vanilla-dmz-0.4.5.2-1.1-any.pkg.tar.zst
-      - xcursor-vanilla-dmz-aa-0.4.5.2-1.1-any.pkg.tar.zst
+      - xcursor-vanilla-dmz-0.4.5.2-1.2-any.pkg.tar.zst
+      - xcursor-vanilla-dmz-aa-0.4.5.2-1.2-any.pkg.tar.zst
     debug: []
 team: galaxy
