--- a/world/cuda/.artixlinux/pkgbase.yaml
+++ b/world/cuda/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: cuda
-  version: 12.8.1-3
-  arch:
-    - x86_64
-  pkgname:
-    - cuda
-    - cuda-tools
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 12.8.1-3
+    version: 12.9.1-1
     packages:
-      - cuda-12.8.1-3-x86_64.pkg.tar.zst
-      - cuda-tools-12.8.1-3-x86_64.pkg.tar.zst
+      - cuda-12.9.1-1-x86_64.pkg.tar.zst
+      - cuda-tools-12.9.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
