--- a/world/seabios/.artixlinux/pkgbase.yaml
+++ b/world/seabios/.artixlinux/pkgbase.yaml
@@ -1,56 +1,61 @@
 ---
-pkgbase:
-  name: seabios
-  version: 1.16.3-1
-  arch:
-    - any
-  pkgname:
-    - seabios
-    - seabios-docs
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.16.3-1
+    version: 1.17.0-1
     packages:
-      - seabios-1.16.3-1-any.pkg.tar.zst
-      - seabios-docs-1.16.3-1-any.pkg.tar.zst
+      - seabios-1.17.0-1-any.pkg.tar.zst
+      - seabios-docs-1.17.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
+team: world
