--- a/world/sslh/PKGBUILD
+++ b/world/sslh/PKGBUILD
@@ -3,37 +3,24 @@
 # Contributor: Jason Rodriguez <jason-aur@catloaf.net>
 
 pkgname=sslh
-pkgver=2.2.3
-pkgrel=2
+pkgver=2.2.4
+pkgrel=1
 pkgdesc='SSL/SSH/OpenVPN/XMPP/tinc port multiplexer'
 arch=('x86_64')
 url='https://www.rutschle.net/tech/sslh/README.html'
 license=('GPL-2.0-only')
+makedepends=('git')
 depends=('glibc' 'libcap' 'libconfig' 'pcre2' 'libev' 'libbsd')
 backup=('etc/sslh.cfg')
 install=$pkgname.install
-source=("https://www.rutschle.net/tech/sslh/$pkgname-v$pkgver.tar.gz"{,.asc}
+source=("git+https://github.com/yrutschle/sslh.git#tag=v${pkgver}?signed"
         'sslh.cfg')
 validpgpkeys=('CDDDBADBEA4B72748E007D326C056F7AC7934136') # Yves Rutschle <yves@rutschle.net>
-sha256sums=('dd7e51c90308ad24654b047bfc29b82578c8e96b872232029ce31517e90b7af7'
-            'SKIP'
+sha256sums=('84eef4cc925523ea1cae6e5a1b0b7127ab4c63592900e185ced28a157062c290'
             '7db2e873ed4c8770e3c38d7ac3ced94221356a3ceafa9d6c8cdc65dd8f09a18e')
 
-prepare() {
-  cd $pkgname-v$pkgver
-  # apply patch from the source array (should be a pacman feature)
-  local src
-  for src in "${source[@]}"; do
-    src="${src%%::*}"
-    src="${src##*/}"
-    [[ $src = *.patch ]] || continue
-    echo "Applying patch $src..."
-    patch -Np1 < "../$src"
-  done
-}
-
 build() {
-  cd $pkgname-v$pkgver
+  cd $pkgname
   ./configure --prefix=/usr --bindir=/usr/bin
   make \
     VERSION=\"$pkgver-$pkgrel\" \
@@ -46,7 +33,7 @@ package() {
   # default arch config
   install -Dm 644 sslh.cfg "$pkgdir/etc/sslh.cfg"
   # manually install to have both ssl-fork and ssl-select
-  cd $pkgname-v$pkgver
+  cd $pkgname
   install -Dm 755 sslh-fork "$pkgdir/usr/bin/sslh-fork"
   install -Dm 755 sslh-select "$pkgdir/usr/bin/sslh-select"
   install -Dm 755 sslh-ev "$pkgdir/usr/bin/sslh-ev"
